@@ -5,5 +5,6 @@
 	<classpathentry kind="var" path="TOMCAT5/common/lib/servlet-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT5/common/lib/jsp-api.jar"/>
 	<classpathentry sourcepath="D:/java/metadata-extractor-2.2.2/src" kind="lib" path="WEB-INF/lib/metadata-extractor-2.2.2.jar"/>
+	<classpathentry kind="lib" path="D:/java/jakarta-tomcat-5.5.7/common/lib/naming-factory-dbcp.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
